# jig

./: .gitignore  README.md  conftest.py  jig-spec.py  jig-usage-guide.md  pyproject.toml
.github/workflows/: ci.yml
docs/: dispatch.md  human-feedback-prompt.md  phase-10-callback-sweep-fanout.md  phase-12-ta-migration.md  phase-13-scout-algerknown.md  phase-9-trace-propagation.md  roadmap.md  sqlite-feedback-maintenance.md
docs/internal/: phase-10-callback-sweep-fanout.md  phase-12-ta-migration.md  phase-9-trace-propagation.md  roadmap-phases.md
docs/release-notes/: span-id.md
src/jig/: __init__.py  _embed.py  _sqlite.py  budget.py  regression.py  sweep.py  sweep_stats.py
src/jig/core/: __init__.py  errors.py  grading.py  pipeline.py  prompt.py  retry.py  runner.py  types.py
src/jig/dispatch/: __init__.py  client.py  listener.py
src/jig/eval/: __init__.py  calibration.py  dataset.py
src/jig/feedback/: __init__.py  composite.py  ground_truth.py  heuristic.py  judge_variants.py  llm_judge.py  loop.py  null.py  parsing.py  trajectory.py  validation.py
src/jig/llm/: __init__.py  _common.py  _parsing.py  anthropic.py  dispatch.py  factory.py  google.py  ollama.py  openai.py  openrouter.py  pricing.py
src/jig/memory/: __init__.py  honcho.py  local.py  zep.py
src/jig/observability/: __init__.py  logging.py
src/jig/replay/: __init__.py  align.py  diff.py  errors.py  registry.py  runner.py  snapshot.py
src/jig/tools/: __init__.py  past_results.py  registry.py
src/jig/tracing/: __init__.py  federated.py  spans.py  (+2 more)
tests/: test_agent_config.py  test_agent_feedback_lifecycle.py  test_align.py  test_budget.py  test_calibration.py  test_complete.py  test_concurrency_regression.py  test_core.py  test_dispatch.py  test_dispatch_callback.py  test_dispatch_listener.py  test_dispatch_module.py  test_docs_snippets.py  test_embed.py  test_errors.py  test_eval_dataset.py  test_factory.py  test_federated_integration.py  test_federated_tracer.py  test_feedback_lifecycle_integration.py  test_feedback_query.py  test_feedback_store.py  test_human_feedback_examples.py  test_human_feedback_prompt.py  test_human_feedback_prompt_wiring.py  test_judge_variants.py  test_lazy_db_locking.py  test_llm_judge.py  test_memory.py  test_null_feedback_loop.py  test_observability_logging.py  test_openrouter.py  test_parsing.py  test_pipeline.py  test_pipeline_feedback_lifecycle.py  test_pricing.py  test_provider_lifecycle.py  test_public_api.py  test_regression.py  test_replay.py  (+11 more)
