[project]
name = "jig"
version = "0.1.0"
description = "Rank One Labs Agent Framework — five interfaces, one run function, everything swappable"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
ollama = ["ollama>=0.4"]
honcho = ["honcho>=0.1"]
zep = ["zep-python>=2.0"]
all = ["jig[anthropic,openai,ollama,honcho,zep]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jig"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
